--- a/style.css
+++ b/style.css
@@ -1976,7 +1976,7 @@ section .map {
   /* Nosotros */
 
   .dividida__left {
-    scroll-margin-top: 0;
+    scroll-margin-bottom: 0;
     grid-area: divLeft;
     height: 100%;
     background-size: cover;
