--- a/style.css
+++ b/style.css
@@ -659,6 +659,18 @@ id {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
+.banner__img{
+  width: 80px;
+  height: 80px;
+  z-index: 2;
+  border: 3px solid white;
+  border-radius: 50%;
+  position: absolute;
+  right: 25px;
+  bottom: 25px;
+  filter: contrast(100%), 
+}
+
 
 
 /* La vision */
@@ -2114,6 +2126,19 @@ section .map {
     font-size: 12px;
     line-height: 25px;
   }
+
+  .banner__img{
+    width: 50px;
+    height: 50px;
+    z-index: 2;
+    border: 3px solid white;
+    border-radius: 50%;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    filter: contrast(100%), 
+  }
+  
 
   /* estructura de texto y foto */
   .mision {
