--- a/style.css
+++ b/style.css
@@ -1972,10 +1972,13 @@ section .map {
   /*section Rehma */
   .article {
     width: 100%;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
     grid-area: article;
+
+    /* background-color: violet; */
   }
 
   .article__texto {
@@ -2000,16 +2003,16 @@ section .map {
   }
 
   .article__card svg {
-    top: 230px;
+    top: 120px;
     left: -60px;
   }
 
   /* flecha abajo */
   .flecha__abajo {
-    font-size: 16px;
+    font-size: 13px;
     color: black;
     position: absolute;
-    bottom: 50px;
+    bottom: 20px;
     cursor: pointer;
     z-index: 9;
     animation-name: flecha;
@@ -2020,7 +2023,7 @@ section .map {
 
   .flecha__abajo img {
     filter: invert(1);
-    width: 20px;
+    width: 15px;
 
   }
 
