--- a/style.css
+++ b/style.css
@@ -129,6 +129,8 @@ id {
   text-align: left;
   color: white;
   z-index: 1;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 /*barra de navegacion*/
@@ -258,6 +260,8 @@ id {
   font-weight: 600;
   margin: 55px auto;
   letter-spacing: 0px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .main__tituloPre {
@@ -514,6 +518,8 @@ id {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   line-height: 50px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .left__tituloSub--dos {
@@ -666,12 +672,10 @@ id {
   border: 3px solid white;
   border-radius: 50%;
   position: absolute;
-  right: 25px;
+  left: 25px;
   bottom: 25px;
   filter: contrast(100%), 
 }
-
-
 
 /* La vision */
 /* estructura de texto y foto */
@@ -739,6 +743,8 @@ id {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   line-height: 50px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .mision__tituloSub {
@@ -848,6 +854,8 @@ h5 {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0px;
   padding: 5px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .aside__subtitulo {
@@ -898,6 +906,8 @@ h5 {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0px;
   padding: 5px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .aside__subtitulo2 {
@@ -951,6 +961,8 @@ h5 {
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0px;
   padding: 5px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .aside__subtitulo3 {
@@ -1026,6 +1038,8 @@ h5 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   line-height: 50px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .iglesia__tituloPre {
@@ -1365,6 +1379,8 @@ h5 {
   font-weight: 600;
   margin-top: 65px;
   color: black;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .swiper-texto h3 {
@@ -1421,6 +1437,8 @@ h5 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   line-height: 50px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .galeria__subtitulo {
@@ -1551,6 +1569,8 @@ h5 {
   font-size: 1em;
   margin-bottom: 20px;
   letter-spacing: 5px;
+
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .form__input {
@@ -2135,7 +2155,7 @@ section .map {
     height: 50px;
     border: 2px solid white;
     border-radius: 50%;
-    right: 10px;
+    left: 10px;
     bottom: 10px;
   }
   
