--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ id {
   background: url('img/pastor\ javier\ corsi\ dos.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: -3em ;
+  background-position-y: -3em;
   background-attachment: fixed;
 
   grid-area: main;
@@ -371,7 +371,7 @@ id {
 
 /*Rehma*/
 .article {
-  scroll-margin-top: -100px;
+  scroll-margin-top: -90px;
   width: 100%;
   height: auto;
   display: flex;
@@ -440,7 +440,7 @@ id {
 .flecha__abajo {
   font-size: 16px;
   position: absolute;
-  bottom: 80px;
+  bottom: 100px;
   cursor: pointer;
   z-index: 999;
 }
@@ -622,7 +622,7 @@ id {
 }
 
 /* banner */
-.banner{
+.banner {
   grid-area: banner;
   background: url(img/main.png);
   background-size: cover;
@@ -650,12 +650,12 @@ id {
   background-color: rgba(0, 0, 0, .7);
 }
 
-.banner  cite{
+.banner cite {
   color: wheat;
   z-index: 2;
 }
 
-.banner__titulo{
+.banner__titulo {
   font-size: 40px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
@@ -665,7 +665,7 @@ id {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
 }
 
-.banner__img{
+.banner__img {
   width: 80px;
   height: 80px;
   z-index: 2;
@@ -674,7 +674,7 @@ id {
   position: absolute;
   left: 25px;
   bottom: 25px;
-  filter: contrast(100%), 
+  filter: contrast(100%),
 }
 
 /* La vision */
@@ -699,13 +699,29 @@ id {
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #0b8793, #360033);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-
   background-attachment: fixed;
-
-
+  position: relative;
+  overflow: hidden;
 }
+
+.wave {
+  position: absolute;
+  bottom: -180px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.wave__dos {
+  position: absolute;
+  bottom: -270px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
 
 .mision::before {
   width: 50%;
@@ -1937,7 +1953,7 @@ section .map {
     display: none;
   }
 
-  .main__text{
+  .main__text {
     width: 90%;
   }
 
@@ -1991,6 +2007,7 @@ section .map {
 
   /*section Rehma */
   .article {
+    scroll-margin-top: 0;
     width: 100%;
     height: 500px;
     display: flex;
@@ -2135,22 +2152,23 @@ section .map {
     height: 150px;
   }
 
-  .banner::before{
+  .banner::before {
     width: 100%;
     height: 150px;
   }
 
-  .banner__titulo{
+  .banner__titulo {
     padding: 5px;
     font-size: 16px;
     line-height: 25px;
   }
-  .banner cite{
+
+  .banner cite {
     font-size: 12px;
     line-height: 25px;
   }
 
-  .banner__img{
+  .banner__img {
     width: 50px;
     height: 50px;
     border: 2px solid white;
@@ -2158,7 +2176,7 @@ section .map {
     left: 10px;
     bottom: 10px;
   }
-  
+
 
   /* estructura de texto y foto */
   .mision {
@@ -2238,6 +2256,15 @@ section .map {
     padding: 0;
     margin: 0 auto;
   }
+
+  .wave {
+    display: none;
+  }
+
+  .wave__dos {
+    display: none;
+  }
+
 
   /* texto descontracturado */
 
