--- a/style.css
+++ b/style.css
@@ -1924,9 +1924,9 @@ section .map {
 }
 
 @media only screen and (max-width: 768px) {
-  
- 
-  .swiper-texto img{
+
+
+  .swiper-texto img {
     width: 120px;
     height: 120px;
     top: 0;
@@ -1934,7 +1934,7 @@ section .map {
     right: 0;
     bottom: 450px;
     margin: auto;
-   
+
   }
 }
 
@@ -2822,6 +2822,105 @@ section .map {
   }
 }
 
+@media only screen and (max-width: 412px) {
+
+  .swiper-texto img {
+    width: 90px;
+    height: 90px;
+    left: 0;
+    right: 0;
+    top: 100px;
+    margin: auto;
+  }
+
+
+  /* Modal niños */
+
+  .popup__card {
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .popup__img {
+    width: 100%;
+    height: 30%;
+    filter: contrast(1.2);
+  }
+
+  .popup__text {
+    width: 100%;
+    height: 70%;
+    padding: 30px;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .popup__text h2 {
+    font-size: 22px;
+    font-weight: 600;
+
+  }
+
+  .popup__text p {
+    margin-top: 12px;
+    font-size: 12px;
+  }
+
+  .popup__social a {
+    font-size: 25px;
+    padding: 10px;
+    color: black;
+
+  }
+
+  .popup__social a:hover {
+    color: var(--color-tres);
+  }
+}
+
+@media (max-width: 684px) and (orientation: landscape) {
+  .main {
+    background-position: center;
+  }
+
+  .aside {
+    height: auto;
+  }
+
+  .swiper-texto {
+    width: 70%;
+    height: auto;
+    padding: 20px;
+  }
+
+  .swiper-texto img {
+    width: 100px;
+    height: 100px;
+    left: 0;
+    right: 0;
+    top: 50px;
+    margin: auto;
+  }
+
+  .swiper-texto h2 {
+    font-size: 1em;
+    margin-bottom: 10px;
+  }
+
+  .swiper-texto h3 {
+    font-size: .8em;
+    margin-bottom: 10px;
+  }
+
+  .swiper-texto p {
+    font-size: 14px;
+    padding-bottom: 20px;
+
+  }
+}
+
 @media only screen and (max-width: 375px) {
   .swiper-texto img {
     width: 100px;
@@ -2842,7 +2941,7 @@ section .map {
   .aside {
     height: auto;
   }
- 
+
   .swiper-texto {
     width: 70%;
     height: auto;
@@ -2857,10 +2956,12 @@ section .map {
     top: 50px;
     margin: auto;
   }
+
   .swiper-texto h2 {
     font-size: 1em;
     margin-bottom: 10px;
   }
+
   .swiper-texto h3 {
     font-size: .8em;
     margin-bottom: 10px;
