--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -56,7 +56,7 @@
     }
 
     .main {
-        background-position-y: 2.5em;
+        /* background-position-y: 2.5em; */
     }
 
     .main__titulo {
@@ -315,8 +315,8 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-        background-position-x: -90px;
-        background-position-y: -10px;
+        /* background-position-x: -90px;
+        background-position-y: -10px; */
         grid-area: main;
         position: relative;
         display: flex;
@@ -1149,3 +1149,5 @@
         margin: auto;
     }
 }
+
+@media only screen and (max-width: 1199.98px) and (orientation: landscape) {}
