--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -175,6 +175,43 @@
         height: 300px;
     }
 
+    /* swiper (testimonios) */
+    .swiper-texto {
+        width: 40%;
+        height: 50vh;
+    }
+
+    .swiper-texto h2 {
+        font-size: 25px;
+        font-weight: 600;
+        margin-top: 65px;
+        color: black;
+    }
+
+    .swiper-texto h3 {
+        font-size: 15px;
+    }
+
+    .swiper-texto p {
+        width: 80%;
+        margin: 0 auto;
+        font-size: 18px;
+        margin-top: 16px;
+        text-align: justify;
+        font-family: 'Cardo', serif;
+    }
+
+    .swiper-imagen {
+        width: 100px;
+        height: 100px;
+        border: 3px solid white;
+        top: 2.8em;
+    }
+
+    .swiper-fondoImg {
+        width: 100%;
+        height: 25%;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -189,61 +226,26 @@
         height: auto;
     }
 
-    /* Testimonios */
-    .swiper-texto {
-        width: 70%;
-        height: auto;
-        padding: 10px;
 
+
+    /* testimonios */
+    .swiper-texto {
+        width: 60%;
+        height: 60vh;
+        color: black;
+    }
+
+    .swiper-texto h2 {
+        margin-top: 75px;
+        color: black;
     }
 
     .swiper-texto p {
-        width: 80%;
-        margin: 20px auto;
-        font-size: 18px;
-        text-align: justify;
+        font-size: 17px;
     }
 
-    .swiper-texto img {
-        width: 120px;
-        height: 120px;
-        object-fit: cover;
-        border-radius: 50%;
-        z-index: 9;
-        position: absolute;
-        top: 200px;
-        left: 50%;
-        margin-left: -60px;
-    }
-}
-
-@media only screen and (max-width: 768px) and (orientation: landscape) {
-
-    /* Testimonios */
-    .swiper-texto {
-        width: 70%;
-        height: auto;
-        padding: 10px;
-
-    }
-
-    .swiper-texto p {
-        width: 80%;
-        margin: 20px auto;
-        font-size: 18px;
-        text-align: justify;
-    }
-
-    .swiper-texto img {
-        width: 120px;
-        height: 120px;
-        object-fit: cover;
-        border-radius: 50%;
-        z-index: 9;
-        position: absolute;
-        top: 200px;
-        left: 50%;
-        margin-left: -60px;
+    .swiper-fondoImg {
+        height: 20%;
     }
 
 }
@@ -772,14 +774,25 @@
         background: url(img/jovenes.jpg);
     }
 
-    /* Testimonios */
-    .swiper-texto img {
-        width: 100px;
-        height: 100px;
-        top: 180px;
-        left: 50%;
-        margin-left: -40px;
 
+    /* testimonios */
+    .swiper-texto {
+        width: 60%;
+        height: 60vh;
+        color: black;
+    }
+
+    .swiper-texto h2 {
+        margin-top: 75px;
+        color: black;
+    }
+
+    .swiper-texto p {
+        font-size: 17px;
+    }
+
+    .swiper-fondoImg {
+        height: 20%;
     }
 
     /*Galeria*/
@@ -1006,31 +1019,31 @@
 
 @media only screen and (max-width: 450px) {
 
-    /* Testimonios */
+
+
+    /* testimonios */
     .swiper-texto {
         width: 80%;
-        height: auto;
-        padding: 10px;
+        height: 60vh;
+        color: black;
+    }
 
+    .swiper-texto h2 {
+        margin-top: 75px;
+        color: black;
     }
 
     .swiper-texto p {
-        width: 80%;
-        margin: 20px auto;
         font-size: 16px;
-        text-align: justify;
     }
 
-    .swiper-texto img {
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-        border-radius: 50%;
-        z-index: 9;
-        position: absolute;
-        top: 200px;
-        left: 50%;
-        margin-left: -60px;
+    .swiper-fondoImg {
+        height: 18%;
+    }
+
+    .swiper-imagen {
+        width: 90px;
+        height: 90px;
     }
 
 
@@ -1088,14 +1101,31 @@
     }
 
 
-    .swiper-texto img {
+    /* testimonios */
+    .swiper-texto {
+        width: 80%;
+        height: 60vh;
+        color: black;
+    }
+
+    .swiper-texto h2 {
+        margin-top: 75px;
+        color: black;
+    }
+
+    .swiper-texto p {
+        font-size: 16px;
+    }
+
+    .swiper-fondoImg {
+        height: 18%;
+    }
+
+    .swiper-imagen {
         width: 90px;
         height: 90px;
-        left: 0;
-        right: 0;
-        top: 190px;
-        margin: auto;
     }
+
 
 
     /* Modal niños */
@@ -1153,14 +1183,31 @@
         background-size: 1200px;
     }
 
-    .swiper-texto img {
-        width: 100px;
-        height: 100px;
-        left: 0;
-        right: 0;
-        top: 160px;
-        margin: auto;
+    /* testimonios */
+    .swiper-texto {
+        width: 80%;
+        height: 50vh;
+        color: black;
     }
+
+    .swiper-texto h2 {
+        margin-top: 75px;
+        color: black;
+    }
+
+    .swiper-texto p {
+        font-size: 14px;
+    }
+
+    .swiper-fondoImg {
+        height: 18%;
+    }
+
+    .swiper-imagen {
+        width: 90px;
+        height: 90px;
+    }
+
 }
 
 @media only screen and (max-width: 1199.98px) and (orientation: landscape) {}
