--- a/style.css
+++ b/style.css
@@ -303,20 +303,18 @@ id {
   border-radius: 8px;
   padding: 8px;
   margin: 15px auto;
-  cursor: pointer;
+
 }
 
 .main__btn input {
   font-size: 16px;
   font-weight: 600;
   border: none;
-  cursor: pointer;
   color: white;
 }
 
 .main__btn:hover {
   border: none;
-  cursor: pointer;
   background-color: var(--color-tres);
 }
 
@@ -1303,7 +1301,6 @@ h5 {
   width: 100%;
   height: 100vh;
   grid-area: testimonios;
-  /* background: rgba(146, 138, 138, 0.253); */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1315,7 +1312,6 @@ h5 {
   width: 100%;
   height: 100vh;
   text-align: center;
-  /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -1329,14 +1325,14 @@ h5 {
   -webkit-align-items: center;
   align-items: center;
   overflow: hidden;
+  background: #0df053;
 }
 
 .swiper-texto {
-  width: 55%;
-  height: 50vh;
-  padding: 10px;
+  width: 40%;
+  height: 70vh;
   border-radius: 18px;
-  background: white;
+  background: rgb(167, 26, 26);
   box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
   text-align: center;
   color: black;
@@ -1369,18 +1365,78 @@ h5 {
   font-family: 'Cardo', serif;
 }
 
-.swiper-texto img {
-  width: 150px;
-  height: 150px;
+.swiper-imagen {
+  width: 120px;
+  height: 120px;
   object-fit: cover;
   border-radius: 50%;
   border: 5px solid white;
   z-index: 9;
   position: absolute;
-  top: 80px;
-  left: 50%;
-  margin-left: -75px;
+  top: 2.5em;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
+
+.swiper-fondoImg {
+  width: 100%;
+  height: 25%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+
+  background: linear-gradient(270deg, #0b2e41, #20bfc8, #2248e3);
+  background-size: 600% 600%;
+
+  -webkit-animation: AnimationName 18s ease infinite;
+  -moz-animation: AnimationName 18s ease infinite;
+  animation: AnimationName 18s ease infinite;
+
+
+  @-webkit-keyframes AnimationName {
+    0% {
+      background-position: 19% 0%
+    }
+
+    50% {
+      background-position: 82% 100%
+    }
+
+    100% {
+      background-position: 19% 0%
+    }
+  }
+
+  @-moz-keyframes AnimationName {
+    0% {
+      background-position: 19% 0%
+    }
+
+    50% {
+      background-position: 82% 100%
+    }
+
+    100% {
+      background-position: 19% 0%
+    }
+  }
+
+  @keyframes AnimationName {
+    0% {
+      background-position: 19% 0%
+    }
+
+    50% {
+      background-position: 82% 100%
+    }
+
+    100% {
+      background-position: 19% 0%
+    }
+  }
+}
+
 
 /*Galeria*/
 .galeria {
@@ -1747,5 +1803,3 @@ section .map {
   font-weight: 600;
   font-family: 'Montserrat', sans-serif;
 }
-
-
