--- a/style.css
+++ b/style.css
@@ -752,22 +752,20 @@ id {
 
 
 /* texto descontracturado */
-
 .t-stroke {
   position: absolute;
   top: 70%;
-  left: 30%;
+  left: 0;
+  right: 0;
+  margin: auto;
   color: transparent;
   -moz-text-stroke-width: 2px;
   -webkit-text-stroke-width: 2px;
   -moz-text-stroke-color: #000000;
   -webkit-text-stroke-color: #ffffff;
-}
 
-h5 {
   font-size: 60px;
   line-height: 80px;
-
 }
 
 .t-shadow {
