--- a/style.css
+++ b/style.css
@@ -214,9 +214,9 @@ id {
 .main {
   width: 100%;
   height: 600px;
-  background: url(img/main.png);
+  background: url(img/main.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position-y: -3em;
   background-attachment: fixed;
 
@@ -736,7 +736,7 @@ id {
 .mision__parrafo {
   font-size: 14px;
   line-height: 21px;
-  margin-top: 10px;
+  margin-top: 3em;
   text-align: justify;
 }
 
@@ -746,7 +746,7 @@ id {
   overflow: hidden;
   margin: 0 auto;
   position: relative;
-  margin-top: 0em;
+  margin-top: 3em;
 }
 
 
@@ -1235,7 +1235,7 @@ id {
   font-family: 'Montserrat', sans-serif;
   color: black;
   margin-top: 20px;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 21px;
 }
 
@@ -1279,7 +1279,7 @@ id {
   /* Absolute position */
   left: 0px;
   position: absolute;
-  top: 110px;
+  top: 300px;
 
   /* Take full size */
   height: 100%;
