--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -238,12 +238,12 @@
     }
 
     /* article (rehma 2022) */
-    .article__card{
+    .article__card {
         width: 80vw;
         height: 50vh;
     }
 
-    .article__parrafo{
+    .article__parrafo {
         font-size: 1.4em;
     }
 
@@ -252,8 +252,32 @@
         position: absolute;
         top: 300px;
         left: -20px;
-      
-      }
+    }
+
+    /* banner */
+    .banner__titulo {
+        font-size: 1.3em;
+    }
+
+    .banner__img {
+        width: 70px;
+        height: auto;
+    }
+
+    /* vision */
+    .mision__texto img {
+        width: 600px;
+        margin-top: 4em;
+    }
+
+
+    /* texto descontracturado */
+    .t-stroke {
+        position: absolute;
+        top: 72%;
+        font-size: 7em;
+        line-height: 90px;
+    }
 
 
 }
