--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -270,6 +270,9 @@
         margin-top: 4em;
     }
 
+    .mision__parrafo{
+        padding-top: 2em;
+    }
 
     /* texto descontracturado */
     .t-stroke {
@@ -279,6 +282,37 @@
         line-height: 90px;
     }
 
+    .aside__texto{
+        width: 10em;
+        height: 10em;
+    }
+    .aside__texto2{
+        width: 10em;
+        height: 10em;
+    }
+    .aside__texto3{
+        width: 10em;
+        height: 10em;
+    }
+    .aside__titulo{
+        font-size: 20px;
+    }
+    .aside__titulo2{
+        font-size: 20px;
+    }
+    .aside__titulo3{
+        font-size: 20px;
+    }
+
+    .aside__subtitulo{
+        font-size: 14px;
+    }
+    .aside__subtitulo2{
+        font-size: 14px;
+    }
+    .aside__subtitulo3{
+        font-size: 14px;
+    }
 
 }
 
